--- a/Module/Mapping_GeoJSON_Linestrings/index.html
+++ b/Module/Mapping_GeoJSON_Linestrings/index.html
@@ -21,6 +21,7 @@
 <body>
     <!-- The div that holds our map -->
     <div id="mapid"></div>
+    <h1>This is Practice</h1>
 
 
     <!-- Leaflet JavaScript -->
